# pyLibProcesses

./: .gitignore  ProcessesManager.py  pyproject.toml
defs/: defs_processes.py  defs_project.py
gui/: ProcessesManagerDialog.py  ProjectProcessesDialog.py
src/pyLibProcesses/: ProcessesManager.py  __init__.py
src/pyLibProcesses/defs/: defs_processes.py  defs_project.py
src/pyLibProcesses/gui/: ProcessesManagerDialog.py  ProcessesManagerDialog.ui  ProjectProcessesDialog.py  ProjectProcessesDialog.ui
