[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pylib-processes"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "DHL" }
]

dependencies = [
    "pylib-gdal",
    "pylib-qttools",
#    "pylib-parameters",
]

[project.optional-dependencies]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]